# UCV_ATE_SI_LAB08

./: .gitignore  README.md
.github/workflows/: sonarqube.yml
laboratorio-adk-ucv/: .gitignore  README.md  pyproject.toml  sonar-project.properties
laboratorio-adk-ucv/agente_ucv/: __init__.py  agent.py
laboratorio-adk-ucv/agente_ucv/.adk/: session.db
laboratorio-adk-ucv/tests/: test_agent.py
