[tool.poetry]
name = "laboratorio-adk-ucv"
version = "0.1.0"
description = "Agente académico UCV usando Google ADK"
authors = ["Luciana Palomino Ticona"]
readme = "README.md"
packages = [
  { include = "agente_ucv" }
]

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "*"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
